--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         
         <div class="Social-Medias">
             <div class="icons-1">
-                <i class="fa-solid fa-utensils"></i>
+                <a href="gallery.html"><i class="fa-solid fa-utensils"></i></a>
             </div>
-            <div class="icons-1">               
-                 <i class="fa-solid fa-map-location-dot"></i>
-            </div>
-            <div class="icons-2">
-                <i class="fa-brands fa-tiktok"></i>
+            <div class="icons-1">    
+                <a href="https://maps.app.goo.gl/CYFsGJgBP7SrMF6RA?g_st=ic"><i class="fa-solid fa-map-location-dot"></i></a> 
             </div>
             <div class="icons-2">
-                <i class="fa-brands fa-facebook-f"></i>
+                <a href="https://www.tiktok.com/t/ZTRbGrtjF/"><i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="icons-2">
-                <i class="fa-brands fa-whatsapp"></i>
+                <a href="https://www.facebook.com/BuffetLuciasFiestaMExicana?mibextid=LQQJ4d"><i class="fa-brands fa-facebook-f"></i></a>
+            </div>
+            <div class="icons-2">
+                <a href="https://wa.me/13476862462"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             
         </div>
