--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://maps.app.goo.gl/CYFsGJgBP7SrMF6RA?g_st=ic"><i class="fa-solid fa-map-location-dot"></i></a> 
             </div>
             <div class="icons-2">
-                <a href="https://www.tiktok.com/t/ZTRbGrtjF/"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="https://www.tiktok.com/t/ZTRE8U69G/"><i class="fa-brands fa-tiktok"></i></a>
             </div>
             <div class="icons-2">
                 <a href="https://www.facebook.com/BuffetLuciasFiestaMExicana?mibextid=LQQJ4d"><i class="fa-brands fa-facebook-f"></i></a>
