--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="image fade">
                 <img src="images/tacos_tray.png" alt="">
             </div>
-            <div class="image fade">
+          <!--  <div class="image fade">
                 <img src="images/Cater-trays2.png" alt="">
-            </div>
+            </div> -->
             <div class="image fade">
                 <img src="images/Agua-fresca.png" alt="">
             </div>
