--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
         
          <div class="image-slideshow">
             <div class="image fade">
-                <img src="images/Cater-trays.jpg" alt="">
+                <img src="images/Cater-trays.jpg" alt="Cater-trays">
             </div>
             <div class="image fade">
-                <img src="images/tacos_tray.png" alt="">
-            </div>
-          <!--  <div class="image fade">
-                <img src="images/Cater-trays2.png" alt="">
-            </div> -->
-            <div class="image fade">
-                <img src="images/Agua-fresca.png" alt="">
+                <img src="images/tacos_tray.png" alt="Tacos">
             </div>
             <div class="image fade">
-                <img src="images/Sangre.JPG" alt="">
-            </div>
-           <!-- <div class="image fade">
-                <img src="images/" alt="">
+                <img src="images/Cater-trays2.JPG" alt="Cater-trays2">
             </div>
             <div class="image fade">
+                <img src="images/carnitas-barbacoa.jpg" alt="Carintas-y-Barbacoa">
+            </div>
+            <div class="image fade">
+                <img src="images/Sangre.JPG" alt="Sangre">
+            </div>
+           <div class="image fade">
+                <img src="images/Chiles-rellenos.jpg" alt="Chiles-rellenos">
+            </div>
+            <!--<div class="image fade">
                 <img src="images/" alt="">
             </div>
             <div class="image fade">
