--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                 <img src="images/Cater-trays2.JPG" alt="Cater-trays2">
             </div>
             <div class="image fade">
-                <img src="images/carnitas-barbacoa.jpg" alt="Carintas-y-Barbacoa">
+                <img class="edit-pic" src="images/Cater-Event2.jpg" alt="Event-2">
             </div>
             <div class="image fade">
                 <img src="images/Sangre.JPG" alt="Sangre">
             </div>
            <div class="image fade">
-                <img src="images/Chiles-rellenos.jpg" alt="Chiles-rellenos">
+                <img class="edit-pic2" src="images/Cater-tray3.PNG" alt="Cater Tray3">
             </div>
             <!--<div class="image fade">
                 <img src="images/" alt="">
