--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
             <div class="image fade">
                 <img src="images/tacos_tray.png" alt="Tacos">
             </div>
-            <div class="image fade">
+            <div class="image `fade">
                 <img src="images/Cater-trays2.JPG" alt="Cater-trays2">
             </div>
             <div class="image fade">
-                <img class="edit-pic" src="images/Cater-Event2.jpg" alt="Event-2">
+                <img class="edit-pic" src="images/barbacoa-event-tray.jpg" alt="Event-2">
             </div>
             <div class="image fade">
                 <img src="images/Sangre.JPG" alt="Sangre">
             </div>
            <div class="image fade">
-                <img class="edit-pic2" src="images/Cater-tray3.PNG" alt="Cater Tray3">
+                <img class="edit-pic2" src="images/barbacoa-head.jpg" alt="Cater Tray3">
             </div>
             <!--<div class="image fade">
                 <img src="images/" alt="">
