--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
                 <img src="images/Cater-trays2.JPG" alt="Cater-trays2">
             </div>
             <div class="image fade">
+                <img src="images/cater-event04.jpg" alt="Event-2">
+            </div>
+            <div class="image fade">
                 <img class="edit-pic" src="images/barbacoa-event-tray.jpg" alt="Event-2">
             </div>
             <div class="image fade">
-                <img src="images/Sangre.JPG" alt="Sangre">
-            </div>
-           <div class="image fade">
                 <img class="edit-pic2" src="images/barbacoa-head.jpg" alt="Cater Tray3">
             </div>
+
+
             <!--<div class="image fade">
                 <img src="images/" alt="">
             </div>
