--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
         
          <div class="image-slideshow">
             <div class="image fade">
-                <img src="images/Cater-trays.jpg" alt="Cater-trays">
+                <img class="cater-tray01" src="images/Cater-trays.jpg" alt="Cater-trays">
             </div>
             <div class="image fade">
-                <img src="images/tacos_tray.png" alt="Tacos">
+                <img class="img_Edit-2" src="images/tacos_tray.png" alt="Tacos">
             </div>
             <div class="image `fade">
                 <img src="images/Cater-trays2.JPG" alt="Cater-trays2">
             </div>
             <div class="image fade">
-                <img src="images/cater-event04.jpg" alt="Event-2">
+                <img class="cater-event04" src="images/cater-event04.jpg" alt="Event-2">
             </div>
             <div class="image fade">
                 <img class="edit-pic" src="images/barbacoa-event-tray.jpg" alt="Event-2">
