--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
                 <a href="https://wa.me/13476862462"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
          </div>
+
+
+            <video class="video-background" controls autoplay muted>
+                <source src="videos/barbacoa.mp4" type="video/mp4">
+                <source src="videos/barbacoa.ogg" type="video/ogg">
+                <p>Sorry, your broswer doesn't support embedded videos. Here's the <a href="https://www.youtube.com/watch?v=A6O2aIYxByE&t=18s">Link to the video</a></p>
+            </video>
+
+            <div class="back img">
+                <img class="background-image" src="images/dolores.PNG" alt="">
+            </div>
         
          <div class="image-slideshow">
             <div class="image fade">
